--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9ce3903c",
+   "id": "0a2f658d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "263b5d36",
+   "id": "c1d77cc4",
    "metadata": {},
    "source": [
     "# Objective\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db5b4d82",
+   "id": "e6332ca7",
    "metadata": {},
    "source": [
     "# Experimental method"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12e780b8",
+   "id": "672c2db4",
    "metadata": {},
    "source": [
     "## Experimental set-up\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89cca66d",
+   "id": "d54c6e98",
    "metadata": {},
    "source": [
     "## Measurements\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd6eaca3",
+   "id": "85b8cd33",
    "metadata": {},
    "source": [
     "# Data Analysis\n",
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d526ea4c",
+   "id": "027f8931",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a748db6",
+   "id": "6524ad3b",
    "metadata": {},
    "source": [
     "Now, we want to take the average of each line to get the average count value for a given angle. The error is then calculated by using the `scipy` function `stats.sem`."
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bdb89ce3",
+   "id": "2d7c6fba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22dc79d5",
+   "id": "52e87729",
    "metadata": {},
    "source": [
     "In the lab script, we are actually asked to normalise the measurements before plotting them. To do this, we need to divide each measurement by the maximum count, ie the normalised maximum needs to equal 1."
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5ac47929",
+   "id": "e4b19e5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ac551bc",
+   "id": "ec79358c",
    "metadata": {},
    "source": [
     "There's an error in the maximum count, so we need to propagate the error following common error propagation rules. Noting the counts for a given angle as $C_i$ and the maximum counts as $M$. The error on the normalised value, $N_i$ should be (noting errors as $\\sigma$s)\n",
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1286018c",
+   "id": "e4923c51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9596b17b",
+   "id": "8197acb0",
    "metadata": {},
    "source": [
     "Now plotting our normalised measurements"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "476af406",
+   "id": "3968c543",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ca515ca",
+   "id": "5ab669ab",
    "metadata": {},
    "source": [
     "These errors are very small, which is nice. This clearly looks like a $\\cos^2$ wave of amplitude 1, which is consistent with Malus' law as the measurements were normalised. Now, to verify that this indeed follows Malus' law, we can fit a general $\\cos^2$ function:\n",
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "547f64ca",
+   "id": "02a3d5bc",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34e1ae56",
+   "id": "100f258a",
    "metadata": {},
    "source": [
     "This is a pretty good fit. As the phase offset is in *degrees*, it is actually very small compared to the whole period (less than $1 \\%$), and so very close to what was expected. The other parameters are also very close to what we would expect."
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "013df061",
+   "id": "0ef2d5e6",
    "metadata": {},
    "source": [
     "# Results\n",
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b285f435",
+   "id": "f3eba1fe",
    "metadata": {},
    "source": [
     "# Discussion"
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b99d6c93",
+   "id": "863f7ae4",
    "metadata": {},
    "source": [
     "## Our errors\n",
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "680da4b0",
+   "id": "653347ac",
    "metadata": {},
    "outputs": [
     {
@@ -383,20 +383,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1be3115",
+   "id": "70741db7",
    "metadata": {},
    "source": [
     "Here, we see that the original beam $E_0$ is projected onto the transmission axis, which means the outgoing beam will be $E$ (between points H and I). This means that\n",
     "\n",
-    "$E = E_0 cos (\\theta)$\n",
+    "$$E = E_0 \\cos (\\theta)$$\n",
     "\n",
-    "And as the power output of our detector is proportional to the intensity of the beam, which is itself p"
+    "And as the power output of our detector is proportional to the intensity of the beam, which is itself proportional to the electric field magnitude squared $E$ or $E_0$ (depending on which intensity we're talking about), we then again find Malus' law, as stated earlier."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "718c6361",
+   "id": "aa512902",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70be9f04",
+   "id": "84f9166a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b971f8b",
+   "id": "6eb771b5",
    "metadata": {},
    "outputs": [],
    "source": []
