--- a/Part2.ipynb
+++ b/Part2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0e48188a",
+   "id": "b57bbdc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb3c9524",
+   "id": "5e90bf6a",
    "metadata": {},
    "source": [
-    "# Aims\n",
+    "# Objective\n",
     "\n",
-    "Study the effect of a 1/2 Waveplate."
+    "In this part, we are studying the effect of a half-wave plate (1/2 WP) on a linearly polarised beam."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "472575fe",
+   "id": "b29f5f8a",
    "metadata": {},
    "source": [
     "# Experimental method"
@@ -31,21 +31,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d837166c",
+   "id": "0b0dbc0e",
    "metadata": {},
    "source": [
     "## Experimental set-up\n",
     "\n",
-    "1/2 WP IS MADE FOR THIS LASER! WOULDN'T WORK OTHERWISE!\n",
-    "\n",
-    "We use the same apparatus, adding the half waveplate (1/2 WP) between the polariser and the analyser, such that we have linearly polarised light incident on the 1/2 WP, and we can study the SOP which comes out of the 1/2 WP by rotating the analyser.\n",
+    "We use the same apparatus, adding the half waveplate (1/2 WP) between the polariser and the analyser, such that we have linearly polarised light incident on the 1/2 WP, and we can study the SOP which comes out of the 1/2 WP by rotating the analyser. Note that this 1/2 WP only works for our laser ($633 \\ \\mathrm{nm}$) because of how it is constructed \n",
     "\n",
     "We first want to align the 1/2 WP so that the transmission axes of the 3 components are aligned, which we did by finding the maximum transmission when the analyser and the polariser are both at 0&deg;, and changing the scale of the 1/2 WP so that this corresponds to 0&deg; for the analyser too. This is different from the method used previously (where we used the minimum transmission to set up), because the minimum transmission is 45&deg; for the 1/2 WP, which falls between graduations, making the calibration less precise. I'll perhaps find a better method later on."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "483c33f9",
+   "id": "0a2be5b1",
    "metadata": {},
    "source": [
     "## Measurements\n",
@@ -60,13 +58,13 @@
     "\n",
     "These were not background subtracted.\n",
     "\n",
-    "We deduce that the two transmission axes are at 90&deg; from each other. Now if we average the power out in the first axis (0 and 180&deg), and also calculate the standard error on the mean using the scipy function `scipy.stats.sem`, and do the same for the second axis, we find"
+    "We deduce that the two transmission axes are at 90&deg; from each other. Now if we average the power out in the first axis (0 and 180&deg;), and also calculate the standard error on the mean using the scipy function `scipy.stats.sem`, and do the same for the second axis, we find"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b9a9012a",
+   "id": "1d38c1eb",
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32aab272",
+   "id": "1253d44b",
    "metadata": {},
    "source": [
     "Clearly here, the ratio between the two maximum output powers is one, especially when we take into account the errors. This means the two axes transmit the same amout of light. OTHER CONCLUSIONS???"
@@ -101,12 +99,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83ce5b67",
+   "id": "f9e11f23",
    "metadata": {},
    "source": [
     "Now, to find the effect of the 1/2 WP on the initial SOP, we find the minimum and maximum transmissions for a range of 1/2 WP angles by rotating the analyser around 360&deg;.\n",
     "\n",
     "Note these are not background subtracted.\n",
+    "\n",
+    "**Table 1**: Measurements of the max and min transmission for different 1/2 WP angles\n",
     "\n",
     "1/2 WP angle (&deg;) | analyser angles for max transmission (&deg;) | max power in the same order (counts) | analyser angles for min transmission (&deg;) | min power in the same order (counts)\n",
     ":-:|:---------:|:--------:|:--------:|:-----:\n",
@@ -121,10 +121,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed38ff8b",
+   "id": "d67c1d9a",
    "metadata": {},
    "source": [
-    "The angle of the analyser when the transmission is maximal is the angle of the SOP incident on the analyser (which is the whole point of the analyser). As the SOP incident to the 1/2 WP is at 0&deg;, we conclude that the 1/2 WP must make the polarisation rotate by twice its angle (ie the angle between the first transmission axis and the SOP). For example, for a 10 &deg; angle of the 1/2 WP, we get a final SOP of 20 &deg;. Further, from the 1st and last line of the table (1/2 WP angle of 0 and 90 &deg;), we see that, as the two transmission axes have the same power output, we get the same results.\n",
+    "The angle of the analyser when the transmission is maximal is the angle of the SOP incident on the analyser (which is the whole point of the analyser, and comes from Malus' law). As the SOP incident to the 1/2 WP is at 0&deg;, we conclude that the 1/2 WP must make the polarisation rotate by twice its angle (ie the angle between the first transmission axis and the SOP). This is equivalent to saying that the incoming SOP is reflected with respect to the transmission axis. For example, for a 10 &deg; angle of the 1/2 WP, we get a final SOP of 20 &deg;. Further, from the 1st and last line of the table (1/2 WP angle of 0 and 90 &deg;), we see that, as the two transmission axes have the same power output, we get the same results.\n",
     "\n",
     "\n",
     "NOTE that the power output is lower at max transmission because of the absorption of the WP + COMMENT ON FLUCTUATIONS\n",
@@ -133,6 +133,8 @@
     "Finally, we take measurements for the power output of a range of 1/2 WP angle, setting analyser and polariser at 0&deg; to study the 1/2 WP's relation to Malus' law.\n",
     "\n",
     "These are also not background subtracted.\n",
+    "\n",
+    "**Table 2**: Power output along the x-axis for a range of 1/2 WP angles\n",
     "\n",
     "1/2 WP angle (&deg;) | output power 1 | output power 2\n",
     ":--:|:---:|:---:\n",
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6aae77d",
+   "id": "9fadd8cd",
    "metadata": {},
    "source": [
     "# Data analysis"
@@ -166,16 +168,35 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1771df62",
+   "id": "497f0c29",
    "metadata": {},
    "source": [
-    "# Results"
+    "# Results\n",
+    "\n",
+    "\n",
+    "...\n",
+    "\n",
+    "These results are consistent with Malus' law: the initial SOP was shifted symmetrically by the transmission axis of the 1/2 WP, and so is at twice the angle of the 1/2 WP from the x-axis. This is the angle inside the $\\cos^2$ term, and so this is why we get $k=2$ here."
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65e691be",
+   "metadata": {},
+   "source": [
+    "# Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "135d2267",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8b17089",
+   "id": "e683a660",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -183,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdc4e26a",
+   "id": "3f5cfae0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -191,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee851135",
+   "id": "96ac3a73",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -199,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae233d29",
+   "id": "c2b3e378",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -207,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8399bee",
+   "id": "f861ed3f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -215,23 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67ff75f5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d528fdf5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "841dcc1b",
+   "id": "8fd952ae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -253,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
