--- a/Part3.ipynb
+++ b/Part3.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c11acf43",
+   "execution_count": 1,
+   "id": "1774a2e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72ba1052",
+   "id": "7b70f5b0",
    "metadata": {},
    "source": [
-    "# Aims\n",
+    "# Objective\n",
     "\n",
-    "Study of quarter waveplates (1/4 WP)"
+    "The objective of the following subsections is to study the effect of quarter-wave plates on an initial SOP."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0005c6e7",
+   "id": "a7babe66",
    "metadata": {},
    "source": [
     "# Investigation of a 1/4 WP"
@@ -31,17 +31,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e83b69c",
+   "id": "1b039c63",
    "metadata": {},
    "source": [
-    "## Aims\n",
+    "## Objective\n",
     "\n",
-    "Investigate a 1/4 WP"
+    "Here, we first want to investigate the properties of the reference 1/4 WP."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b46827f4",
+   "id": "adc4ff49",
    "metadata": {},
    "source": [
     "## Experimental method"
@@ -49,30 +49,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e97fff2d",
+   "id": "9fb2152d",
    "metadata": {},
    "source": [
     "### Experimental set-up\n",
     "\n",
-    "1/4 WP IS MADE FOR THIS LASER! WOULDN'T WORK OTHERWISE!\n",
+    "Note that all the 1/4 WP used in the following sections are made for the laser we have, ie for $633 \\ \\mathrm{nm}$ light.\n",
     "\n",
-    "To study the effect of the reference 1/4 WP on an incoming SOP, we put it between the 1/2 WP and the analyser. This will allow us to study the effect of a 1/4 WP on any SOP created by the 1/2 WP as described in the previous section. We align the REF 1/4 WP such that we get maximum transmission at 0&deg;. There were not many adjustments made as the fast axis was already (nearly) aligned."
+    "To study the effect of the reference 1/4 WP on an incoming SOP, we put it between the 1/2 WP and the analyser. This will allow us to study the effect of a 1/4 WP on any SOP created using the 1/2 WP as described in the previous section. We align the REF 1/4 WP such that we get maximum transmission at 0&deg;. There were not many adjustments made as the fast axis was already (nearly) aligned."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ad43ef81",
+   "id": "fa86d10f",
    "metadata": {},
    "source": [
     "### Measurements\n",
     "\n",
-    "- identify position of 1/4 WP's slow axis\n",
-    "- Fixed angle for 1/4 WP (fast axis), 1/2 WP and polariser => rotate analyser to find min and max transmission\n",
-    "- Fixed angle for 1/2 WP, polariser and 1/4 WP (slow axis) => rotate analyser to find min and max transmission\n",
-    "\n",
     "Background is now 3 counts. It is less than earlier today because it is now dark outside.\n",
     "\n",
-    "We first notice that, when we rotate the 1/4 WP, we get maximal output powers at 0, 90, 180, and 270&deg;. This reveals that the two axes of transmission are at 90&deg; COMMENT ON FAST + SLOW AXIS DIFFERENCE!!!\n",
+    "We first notice that, when we rotate the 1/4 WP, we get maximal output powers at 0, 90, 180, and 270&deg;. This reveals that the two axes of transmission are at 90&deg;. The one along the x-axis is the fast axis and the one along the y-axis is the slow axis. They are called this way because the light travels faster along the former than along the faster one. This is what leads to the phase shift between the x and y component of the electric field in the polarised beam (which is $\\pi$ in the case of a 1/2 WP) WHY???\n",
     "\n",
     "We first want to know the effect of a 1/4 WP aligned along its fast axis on a 0&deg; SOP. We do this by setting the 1/2 WP to 0&deg; and rotating the analyser.\n",
     "\n",
@@ -100,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e0f503a9",
+   "id": "f1e4d858",
    "metadata": {},
    "outputs": [
     {
@@ -127,31 +123,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa498b9e",
+   "id": "8bf4b087",
    "metadata": {},
    "source": [
-    "We can see the ratio between the two will be very close to one, but not exactly, and their error bounds do not overlap. The two axes transmit a slightly different amount of light, but this is very small."
+    "We can see the ratio between the two will be very close to one, but not exactly, and their error bounds do not overlap. The two axes transmit a slightly different amount of light, but this is very small, though this could just be because of our error."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2c0ba482",
-   "metadata": {},
-   "source": [
-    "## Data analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8281a01b",
-   "metadata": {},
-   "source": [
-    "## Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7988673d",
+   "id": "e6bf3eed",
    "metadata": {},
    "source": [
     "# Creation of 45&deg; SOP"
@@ -159,15 +139,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8bccf93",
+   "id": "e646aece",
    "metadata": {},
    "source": [
-    "## Aims"
+    "## Objective\n",
+    "\n",
+    "Here, we want to investigate the effect of a 45° SOP on our 1/4 WP, and thus devise a way to make this angle very precise."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c73efd4b",
+   "id": "43f087b9",
    "metadata": {},
    "source": [
     "## Experimental method"
@@ -175,48 +157,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b6f05ee",
+   "id": "107a9c05",
    "metadata": {},
    "source": [
     "### Experimental set-up\n",
     "\n",
-    "- description of apparatus\n",
-    "- suggest way of checking incident SOP is exactly at 45&deg; when incident on 1/4 WP + suitability of method when compared to the one used previously\n",
+    "The apparatus is the same as in the previous subsection. Here, we want to create circularly polarised light. To do this, we need a 45&deg; linear SOP incident on the 1/4 WP. WHY??? Because the 1/2 WP shifts a SOP aligned with the x-axis by twice the angle of the 1/2 WP, we want it to be at 22.5&deg; The best way to achieve this is to set the angle to about 22&deg;, and then rotate the analyser, and adjust the 1/2 WP until we get the same power output for every angle of analyser (want the light to be circularly polarised, WHY and HOW???). The best I could do was power changing from 428 and 433, which would mean the elliptically polarised light had an eccentricity of 0.15. A circle has an eccentricity of 0.\n",
     "\n",
-    "The apparatus is the same as in the previous subsection. Here, we want to create circularly polarised light. To do this, we need a 45&deg; linear SOP incident on the 1/4 WP. Because the 1/2 WP shifts the SOP by twice the angle of the 1/2 WP, we want it to be at 22.5&deg; The best way to achieve this is to set the angle to about 22&deg;, and then rotate the analyser, and adjust the 1/2 WP until we get the same power output at every angle of analyser (want the light to be circularly polarised, WHY and HOW???). The best I could do was power changing from 428 and 433, which would mean the elliptically polarised light had an eccentricity of 0.15. A circle has an eccentricity of 0.\n",
-    "\n",
-    "SUITABILITY COMPARED WITH PREVIOUS??? PRECISE TO LESS THAN A DEGREE!!! ALLOWS GREAT PRECISION"
+    "This method of adjusting an angle means that it is precise to less than 1 degree, which is far more precise than our previous methods, which were precise to the degree because of our reading error*. However, it is probably not suitable for setting every angle as it would mean setting the 1/2 and 1/4 WP such that the angle between the SOP leaving the 1/2 WP and the transmission axis of the 1/4 WP are at 45°, which may require more calculations, and so more time. (unsuitable for quick measurements)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "00ba8390",
-   "metadata": {},
-   "source": [
-    "### Measurements\n",
-    "\n",
-    "The power output does not change (or minimally), because the light is circularly polarised (same power in every direction), as expected. It changes between 428 and 433 MORE EXPLANATION"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "15851357",
-   "metadata": {},
-   "source": [
-    "## Data Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a351eab3",
-   "metadata": {},
-   "source": [
-    "## Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1a01b5b2",
+   "id": "c04ab230",
    "metadata": {},
    "source": [
     "# Optional part (NOT DONE YET)"
@@ -224,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "253d53c5",
+   "id": "567e79a6",
    "metadata": {},
    "source": [
     "## Aims"
@@ -232,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adc70d24",
+   "id": "2963d75b",
    "metadata": {},
    "source": [
     "## Experimental method"
@@ -240,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4da4ca77",
+   "id": "c9bfd16f",
    "metadata": {},
    "source": [
     "### Set-up\n",
@@ -250,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "398dc324",
+   "id": "f49401bd",
    "metadata": {},
    "source": [
     "### Measurements\n",
@@ -261,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a6fdf43",
+   "id": "fcccdcf4",
    "metadata": {},
    "source": [
     "## Results"
@@ -269,27 +222,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea696aff",
+   "id": "039eea3c",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "f4ce60bf",
+   "id": "564d084a",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a46c7db2",
+   "id": "fdea0363",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "8db5fe89",
+   "id": "0e3e5840",
    "metadata": {},
    "source": [
     "# Investigation of 2 1/4 WP in series"
@@ -297,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20341f4c",
+   "id": "74a056ca",
    "metadata": {},
    "source": [
     "## Aims"
@@ -305,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b20570ab",
+   "id": "4a024faa",
    "metadata": {},
    "source": [
     "## Experimental method"
@@ -313,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "534e6c38",
+   "id": "a1d4c6ed",
    "metadata": {},
    "source": [
     "### Experimental set-up\n",
@@ -323,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00398e3d",
+   "id": "ce14c753",
    "metadata": {},
    "source": [
     "### Measurements\n",
@@ -331,6 +284,8 @@
     "Background is 3.\n",
     "\n",
     "We first want to see the effect of two 1/4 WP in series on an incident linear SOP with their fast axes aligned. To do this, we create SOPs at different angles using the 1/2 WP. We then get:\n",
+    "\n",
+    "**Table 1**: minimum and maximum power output for aligned 1/4 WP.\n",
     "\n",
     "1/2 WP angle (&deg;) | angle of the SOP incident on the first 1/4 WP (&deg;) | analyser angles for max transmission (&deg;) | max power in the same order (counts) | analyser angles for min transmission (&deg;) | min power in the same order (counts)\n",
     ":---:|:---:|:--------:|:--------:|:--------:|:-----:\n",
@@ -343,9 +298,11 @@
     "\n",
     "Note that these are not background subtracted, and that the 22.5&deg; angle was obtained using the same method as described above.\n",
     "\n",
-    "We see here that the two 1/4 WPs in series have the effect of one 1/2 WP, ie the initial and final SOPs are mirror images of eachother: the initial SOP was flipped along the x-axis (as, in general, $-\\theta = 360-\\theta$) . WHY PHYSICALLY!!!\n",
+    "We see here that the two 1/4 WPs in series have the effect of one 1/2 WP, ie the initial and final SOPs are mirror images of eachother: the initial SOP was flipped along the x-axis (as, in general, $-\\theta = 360-\\theta$) . This is because each 1/4 WP contributes to a phase shift of $\\pi/2$ on either $E_x$ or $E_y$, which makes a total phase shift of $/pi$, identical to a 1/2 WP.\n",
     "\n",
     "Now, we take the exact same measurements, but we shift one of the 1/4 WPs by 90&deg; so that the slow axis of one is aligned with the fast axis of the other.\n",
+    "\n",
+    "**Table 1**: minimum and maximum power output for 1/4 WPs at 90°.\n",
     "\n",
     "1/2 WP angle (&deg;) | angle of the SOP incident on the first 1/4 WP (&deg;) | analyser angles for max transmission (&deg;) | max power in the same order (counts) | analyser angles for min transmission (&deg;) | min power in the same order (counts)\n",
     ":---:|:---:|:--------:|:--------:|:--------:|:-----:\n",
@@ -356,8 +313,7 @@
     "90   | 180 | 0, 180   | 825, 826 | 90,  270 | 3, 3\n",
     "0    | 0   | 0, 180   | 840, 835 | 90,  270 | 3, 3\n",
     "\n",
-    "Here, we see that when the slow axis of one 1/4 WP is aligned with the fast axis of the other, they cancel out, and so we the SOP of the beam remains the same. WHY PHYSICALLY???\n",
-    "\n",
+    "Here, we see that when the slow axis of one 1/4 WP is aligned with the fast axis of the other, they cancel out, and so we the SOP of the beam remains the same. This is because one of the WPs shifts $E_x$ by $\\pi/2$ while the other shifts $E_y$ by the same amount, meaning there is no relative phase shift between the 2 components of electric field.\n",
     "\n",
     "NOTE seems to be an assymetry in the power maxima. perhaps 1/4 WP has different power outputs depending on its axis. WHY???\n",
     "=> Analysis difference in power outputs"
@@ -365,18 +321,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2389659",
+   "id": "f7e5158d",
    "metadata": {},
    "source": [
-    "## Data analysis"
+    "## Discussion"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b7acb261",
+   "id": "b888a4fd",
    "metadata": {},
    "source": [
-    "## Results"
+    "1/4 WPs are made out of birefringent material, which means the refractive index changes depending on the orientation of the components of the incoming SOP. This means one component of the light will be travelling faster than the other, creating a phase shift between the two. 1/4 WPs are made such that the phase shift between the two waves is $\\pi/2$, ie there is a 1/4 wave difference between the two, which explains the name. The reason why light at 45° to a 1/4 WP becomes circularly polarised is because one of the components will now have the form of a sine wave, while the other will still be a cosine wave (as $\\cos(\\theta - \\pi/2) = \\sin(\\theta)$). This means the electric field of the beam will basically draw the unit circle if the amplitude(which comes back to its definition)"
    ]
   }
  ],
@@ -396,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
